internal/octogo/testdata/22_relational_ops.ogo
// COMPILE

func testRelational() {
	var s1 string = "octo"
	var s2 string = "go"

	// Valid string operations
	var s3 string = s1 + s2
	var isEqual bool = (s1 == s2)
	var isLess bool = (s1 < s2)

	var b1 bool = true
	var b2 bool = false

	// Valid boolean equality
	var bEq bool = (b1 != b2)

	// ERROR "invalid operation|operator < not defined for bool"
	var inv1 bool = (b1 < b2)

	var num int = 10
	// ERROR "mismatched types string and int|cannot compare"
	var inv2 bool = (s1 == num)
}